fix(header): truncate title text to prevent overflow for smaller viewports

--- a/src/components/instant-apps-header/instant-apps-header.scss
+++ b/src/components/instant-apps-header/instant-apps-header.scss
@@ -86,6 +86,7 @@
     .instant-apps-header__header-content {
       display: flex;
       align-items: center;
+      max-width: 100%;
 
       a {
         display: flex;
@@ -105,6 +106,8 @@
         color: var(--calcite-ui-text-1);
         font-weight: 430;
         white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       #infoButton {
